@@ -4,18 +4,18 @@ import com.groomthon.univ.common.entity.BaseTimeEntity;
 import jakarta.persistence.*;
 import lombok.*;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Entity
 @AllArgsConstructor
 @NoArgsConstructor(access = AccessLevel.PROTECTED)
 @Getter
-@Setter
 @Builder(toBuilder = true)
-@Table(name = "`users`")
+@Table(name = "users")
 public class User extends BaseTimeEntity implements UserDetails {
 
     @Id
@@ -23,15 +23,21 @@ public class User extends BaseTimeEntity implements UserDetails {
     @Column(name = "user_id")
     private Long id;
 
+    @Column(nullable = false, unique = true, length = 50)
     private String email;
+
+    @Column(nullable = false, length = 30)
     private String username;
+
+    @Column(nullable = false)
     private String password;
 
     @Enumerated(EnumType.STRING)
+    @Column(nullable = false)
     private Role role;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(() -> this.role.getRole());
+        return List.of(new SimpleGrantedAuthority(role.name()));
     }
 }
